--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -283,7 +283,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<webXml>springmvc\src\main\webapp\WEB-INF\web.xml</webXml>
+					<webXml>src\main\webapp\WEB-INF\web.xml</webXml>
 				</configuration>
 			</plugin>
 		</plugins>
