war file name change

--- a/springmvc/pom.xml
+++ b/springmvc/pom.xml
@@ -284,6 +284,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<webXml>src\main\webapp\WEB-INF\web.xml</webXml>
+          			<warName>springmvc</warName>
 				</configuration>
 			</plugin>
 		</plugins>
